# periodic_table_viz

./: .gitignore  README.md  main.py  periodic_table.csv  pyproject.toml  scrape_to_csv.py  scrape_to_db.py  update_elements.py
static/: script.js  style.css
templates/: index.html
