[tool.poetry]
name = "ptable"
version = "0.1.0"
description = ""
authors = ["subhamsarangi <subhamsarangi2016@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"
pymongo = "^4.11.2"
jinja2 = "^3.1.5"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
bs4 = "^0.0.2"
pandas = "^2.2.3"
tqdm = "^4.67.1"
lxml = "^5.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
